# overengineer-dis-backend

./: .env  .gitlab-ci.yml  Cargo.toml  Dockerfile
kubernetes/: 10-configmap.yaml  20-deployment.yaml  30-service.yaml  40-ingress.yaml
src/: main.rs
src/game/: cards.rs  contract.rs  desk.rs  player.rs
src/models/: cards.rs  contract.rs  desk.rs  game.rs  mod.rs  player.rs
src/net/: mod.rs  session.rs
src/net/message/: client.rs  server.rs
