[package]
name = "overengineer-dis-backend"
version = "0.1.0"
authors = ["j-brn <me@jbrn.eu>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix = "0.9.0"
actix-web-actors = "2.0.0"
serde_json = "1.0.45"
dotenv = "0.15.0"
serde = "1.0.104"
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.7.3"
sentry = "0.17.0"
futures = "0.3.1"